# LP50xx-STM32-Driver

./: README.md
src/: CMakeLists.txt  blinky.cpp  stm32f1xx_hal_conf.h
src/drivers-peripheral/: CMakeLists.txt  LP50xx-i2c-driver.cpp  LP50xx-i2c-driver.h
